force-app/objects/Account/fields/Bids_in_Sharepoint__c.field-meta.xml
<CustomField>
    <fullName>Bids_in_Sharepoint__c</fullName>
    <inlineHelpText>URL to Account&apos;s area in the BID portal</inlineHelpText>
    <label>Bids in Sharepoint</label>
    <type>Url</type>
</CustomField>