force-app/objects/Account/fields/Prime_BID_Support__c.field-meta.xml
<CustomField>
    <fullName>Prime_BID_Support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Dedicated BID resource who is famliar with the customer and the customer&apos;s procurement process</inlineHelpText>
    <label>Prime BID Support</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsBIDSupport</relationshipName>
    <type>Lookup</type>
</CustomField>